<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kacper.fizbit.Question">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mPytanie"
            android:layout_width="353dp"
            android:layout_height="147dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <ProgressBar
            android:id="@+id/mTimer"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="349dp"
            android:layout_height="21dp"
            android:layout_below="@+id/mPytanie"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="179dp" />

        <Button
            android:id="@+id/mAanswer"
            android:layout_width="175dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/mDanswer"
            android:text="@string/A"
            app:layout_constraintBottom_toTopOf="@+id/mCanswer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mTimer" />

        <Button
            android:id="@+id/mBanswer"
            android:layout_width="175dp"
            android:layout_height="90dp"
            android:layout_above="@+id/mDanswer"
            android:layout_toEndOf="@+id/mAanswer"
            android:text="@string/B" />

        <Button
            android:id="@+id/mDanswer"
            android:layout_width="175dp"
            android:layout_height="90dp"
            android:layout_alignEnd="@+id/mPytanie"
            android:layout_below="@+id/mAanswer"
            android:text="@string/D"
            tools:layout_editor_absoluteX="193dp" />

        <Button
            android:id="@+id/mCanswer"
            android:layout_width="175dp"
            android:layout_height="90dp"
            android:layout_below="@+id/mBanswer"
            android:layout_toStartOf="@+id/mDanswer"
            android:text="@string/C"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="324dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mRecycle"
            android:layout_width="377dp"
            android:layout_height="113dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/mCanswer"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="382dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
