<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kacper.fizbit.Category">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mKategoria"
            android:layout_width="371dp"
            android:layout_height="63dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mFizyka"
            android:layout_width="359dp"
            android:layout_height="67dp"
            android:layout_below="@+id/mKategoria"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="78dp"
            android:text="@string/Fizyka"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mKategoria" />

        <Button
            android:id="@+id/mAstronomia"
            android:layout_width="357dp"
            android:layout_height="58dp"
            android:layout_alignStart="@+id/mFizyka"
            android:layout_below="@+id/mFizyka"
            android:layout_marginTop="60dp"
            android:text="@string/Astronomia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mFizyka" />

        <Button
            android:id="@+id/mPowrot"
            android:layout_width="357dp"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/mAstronomia"
            android:layout_marginBottom="60dp"
            android:text="@string/Powrot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mAstronomia" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
